Fixed horizontal scroll

--- a/blocks/partners/__button/partners__button.css
+++ b/blocks/partners/__button/partners__button.css
@@ -1,20 +1,26 @@
-.partners__button{
-    margin: 0 auto 56px;
-    padding: 0;
-    display: none;
-    background-color: #F8F8F8;
-    border-radius: 56px;
-    width: 327px;
-    height: 56px;
-    border: none;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
-    cursor: pointer;
+.partners__button {
+  margin: 0 auto 56px;
+  padding: 0;
+  display: none;
+  background-color: #f8f8f8;
+  border-radius: 56px;
+  width: 327px;
+  height: 56px;
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 560px) {
-    .partners__button {
-      display: block;
-    }
+  .partners__button {
+    display: block;
   }
+}
+
+@media screen and (max-width: 356px) {
+  .partners__button {
+    width: 300px;
+  }
+}
